@@ -1,3 +1,9 @@
+2000-05-28  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* exult.cc: Alt keys work now (by catching their events).
+	* 't' key does 'target' as in original game.
+	* Scrolling/moving with gumps fixed.
+
 2000-05-28  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
 	* Makefile.be: modified to windows makefile to serve as Be makefile
 	* gamedat.cc: only include dir.h on windows
@@ -9,6 +15,12 @@
 2000-05-26  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
 	* Configuration.cc: added a temp. BeOS config file section
 	* Configuration.cc: is_file set to true, even if file not found
+
+2000-05-26  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Fade in/fade out working.
+	* Sprite effects done.
+	* Sleeping (in bed) working.
 
 2000-05-25  Jeff Freedman  <jeff@amy.nerble.net>
 
